[package]
name = "gut_champion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde = {version = "1.0.131", features = ["derive"]}
serde_json = "1.0.73"
rand = "0.8.5"
[dependencies.sdl2]
version = "0.35.1"
default-features = false
features = ["mixer", "image", "ttf"]
